--- a/views/producto.handlebars
+++ b/views/producto.handlebars
@@ -3,6 +3,15 @@
 
 <head>
 
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+
+
     <title>Producto</title>
 
     <link rel="stylesheet" href="/styles/producto.css">
@@ -24,9 +33,9 @@
     <div class="carro--flotante">
         <div class="">
             <a href="/forma">
-            <img class="carro__imagen"
-                src="https://purepng.com/public/uploads/large/purepng.com-shopping-cartshoppingcarttrolleycarriagebuggysupermarkets-1421526532356pnf5n.png"
-                alt="">
+                <img class="carro__imagen"
+                    src="https://purepng.com/public/uploads/large/purepng.com-shopping-cartshoppingcarttrolleycarriagebuggysupermarkets-1421526532356pnf5n.png"
+                    alt="">
             </a>
         </div>
 
@@ -63,6 +72,41 @@
         </div>
 
     </article> <!-- fin de producto >-->
+
+
+    <footer class="pie">
+        <div class="search-text">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="form">
+                        <h4>REGISTRATE</h4>
+                        <form id="search-form" class="form-search form-horizontal">
+                            <input type="text" class="input-search" placeholder="Correo">
+                            <button type="submit" class="btn-search">Enviar</button>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-top">
+            <div class="container1">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 text-center">
+                    <a href="#"><i class="fa fa-facebook fa-2x"></i>Facebook</a>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 text-center">
+                    <a href="#"><i class="fa fa-twitter fa-2x"></i>Twitter</a>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 text-center">
+                    <a href="#"><i class="fa fa-github fa-2x"></i>Github</a>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 text-center">
+                    <a href="#"><i class="fa fa-google-plus fa-2x"></i>Google</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="/scripts/producto.js"></script>
