--- a/views/producto.handlebars
+++ b/views/producto.handlebars
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="nav">
-        <img src="/fotos/logo.png" alt="" class="logo">
+        <a href="/"></a><img src="/fotos/logo.png" alt="" class="logo"></a>
         <a href="" class="nav__item">Inicio</a>
         <a href="" class="nav__item">Sobre nosotros</a>
         <a href="" class="nav__item">Sedes</a>
@@ -65,14 +65,28 @@
             </ul>
         </div>
         <div class="producto__texto">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum pariatur distinctio quae maiores eveniet
-                fuga accusantium veritatis voluptatibus praesentium harum impedit sit hic nostrum totam cupiditate,
-                magnam accusamus perspiciatis ducimus.</p>
+            <p>Tener una mascota en casa es una gran responsabilidad, no solo se trata de alimentarla, asearla y sacarla
+                a pasear, además es fundamental entrenarla y darle mucho amor. <br>
+                <br>
+                Si estás considerando sumar un miembro a tu manada, ¿qué tal adoptarlo? Al hacerlo no solo sentirás una
+                inmensa satisfacción, sino que además ayudarás al animal a tener una mejor vida.</p>
             <img class="producto__texto__img" src="/fotos/certificado.png" alt="">
         </div>
 
     </article> <!-- fin de producto >-->
+    <div class="recomendacion">
+        <div class="recomendacion__imagen">
+            <img src="https://img.icons8.com/clouds/2x/box-important.png" alt="">
+        </div>
+        <div class="recomendacion__texto">
+            <h3>¿Sabías que al cuidar de tu mascota estás cuidando de tu familia?</h3>
+            <p> Al igual que un niño, tus mascotas necesitan de cuidados médicos desde sus primeras semanas de vida. De
+                lo contrario pueden llegar a contagiarse de posibles parásitos y enfermedades que consecuentemente
+                pueden llegar a enfermar a tu familia. Por lo tanto, proteger a tu familia significa darle a tu mascota
+                buena salud. </p>
+        </div>
 
+    </div>
 
     <footer class="pie">
         <div class="search-text">
