--- a/views/forma.handlebars
+++ b/views/forma.handlebars
@@ -5,6 +5,10 @@
 
     <title>Formulario Datos Cliente</title>
     <link rel="stylesheet" href="/styles/forma.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
@@ -14,11 +18,14 @@
     <div class="titulo">
         <p class="titulo__texto">Revision de datos</p>
     </div>
+
     <article class="contenido">
         <div class="contenido--carrito">
-            <h3>Carrito</h3>
+            <h2 class="contenido__titulo">Carrito</h2>
             <ul class="carrito-desplegado__lista"></ul>
         </div>
+
+
         <div class="contenido--forma">
             <form id="msform" action="/adopciomexitosa" method="POST">
                 <!-- progressbar -->
