un arreglo a titulos

--- a/views/forma.handlebars
+++ b/views/forma.handlebars
@@ -36,15 +36,14 @@
                 </ul>
                 <!-- fieldsets -->
                 <fieldset>
-                    <h2 class="fs-title">Datos Personales></h2>
+                    <h2 class="fs-title">Medio de Pago</h2>
                     <input type="text" name="email" placeholder="Email" />
                     <input type="text" name="tarjeta" placeholder="Tarjeta" />
                     <input type="text" name="cvv" placeholder="cvv" />
                     <input type="button" name="next" class="next action-button" value="Next" />
                 </fieldset>
                 <fieldset>
-                    <h2 class="fs-title">Social Profiles</h2>
-                    <h3 class="fs-subtitle">Your presence on the social network</h3>
+                    <h2 class="fs-title">Lugar de vivienda</h2> 
                     <input type="text" name="ciudad" placeholder="Ciudad" />
                     <input type="text" name="estado" placeholder="Estado" />
                     <input type="text" name="pais" placeholder="Pais" />
@@ -52,7 +51,7 @@
                     <input type="button" name="next" class="next action-button" value="Next" />
                 </fieldset>
                 <fieldset>
-                    <h2 class="fs-title">Personal Details</h2>
+                    <h2 class="fs-title">Informacion Personal</h2>
                     <input type="text" name="fname" placeholder="Nombre" />
                     <input type="text" name="lname" placeholder="Apellido" />
                     <input type="text" name="phone" placeholder="Numero telefonico" />
